--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; URL='https://maps.app.goo.gl/QE3Bc1AWJLBF26zr6?g_st=ac'" />
+    <meta http-equiv="refresh" content="0; URL='https://www.youtube.com'" />
   </head>
   <body>
     <p>Redirecting...</p>
