--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; URL='https://maps.app.goo.gl/R4LEaBKz9F8mC5JFA'" />
+    <meta http-equiv="refresh" content="0; URL='https://maps.app.goo.gl/9riNA4egMsbn5Qms6?g_st=awb'" />
   </head>
   <body>
     <p>Redirecting...</p>
